@@ -1,5 +1,8 @@
 Version 0.93 - 17 August 2012, by Per Øyvind Karlsen <peroyvind@mandriva.org>
 
+- do not install bootloader when configuring X during install.
+  this will be done at end of summary to allow selecting where
+  to install bootloader (mga#5044)
 - fix crash regression (mga#5238)
 - display_driver_helper:
   o drop support for unused and unuseful --check-initrd option
